[package]
name = "ssml-parser"
version = "0.1.4"
edition = "2021"
description = "A crate for parsing speech sythnesis markup language"
repository = "https://github.com/emotechlab/ssml-parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["parser", "ssml"]
categories = ["text-processing"]

[features]
async = ["async-trait"]

[dependencies]
anyhow = "1.0.95"
async-trait = { version = "0.1.83", optional = true }
derive_builder = "0.13.1"
http = "1.2.0"
indexmap = "2.7.0"
lazy_static = "1.5"
mediatype = "0.19.18"
quick-xml = "0.37"
regex = "1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
fake = { version = "3.1.0", features = ["derive", "http"] }
rand = "0.8.5"
