[package]
name = "ssml-parser"
version = "0.1.4"
edition = "2021"
description = "A crate for parsing speech sythnesis markup language"
repository = "https://github.com/emotechlab/ssml-parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["parser", "ssml"]
categories = ["text-processing"]

[features]
async = ["async-trait"]

[dependencies]
anyhow = "1.0.97"
async-trait = { version = "0.1.88", optional = true }
derive_builder = "0.20.2"
http = "1.3.1"
indexmap = "2.9.0"
lazy_static = "1.5"
mediatype = "0.19.20"
quick-xml = "0.37"
regex = "1"

[dev-dependencies]
assert_approx_eq = "1.1"
fake = { version = "4.3", features = ["derive", "http"] }
rand = "0.9"
