[package]
name = "ssml-parser"
version = "0.1.4"
edition = "2021"
description = "A crate for parsing speech sythnesis markup language"
repository = "https://github.com/emotechlab/ssml-parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["parser", "ssml"]
categories = ["text-processing"]

[features]
async = ["async-trait"]

[dependencies]
anyhow = "1.0.101"
async-trait = { version = "0.1.89", optional = true }
derive_builder = "0.20.2"
http = "1.4.0"
indexmap = "2.13.0"
lazy_static = "1.5"
mediatype = "0.21.0"
quick-xml = "0.37"
regex = "1"

[dev-dependencies]
assert_approx_eq = "1.1"
fake = { version = "4.4", features = ["derive", "http"] }
rand = "0.9"
